--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header {
+  min-height: 20vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+}
+
+h1 {
+  font-size: 2.3rem;
+  padding: 0.5rem;
+}
+
+input,
+button {
+  width: 300px;
+  border: 2px solid gray;
+  padding: 6px 10px;
+  margin-bottom: 0.5rem;
+  font-size: 1.2rem;
+}
+
+button {
+  cursor: pointer;
+  background: #222;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+button:hover {
+  transform: translateY(-2px);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input:focus,
+button:focus {
+  outline: none;
+}
+
+.jokes {
+  width: 80%;
+  margin: 0 auto;
+}
+
+h2 {
+  margin: 1rem;
+}
+
+/* ! HOME */
+
+.home {
+  min-height: 92vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.home img {
+  pointer-events: none;
 }
